--- a/HalloDoc Project/appsettings.json
+++ b/HalloDoc Project/appsettings.json
@@ -9,5 +9,9 @@
   "Jwt": {
     "Key": "iohonhpogiuxynbtehtnxeoiybcpsklztjvnoeyihsnzlkcjsghdois",
     "Issuer": "youtCompanyIssuer.com"
+  },
+  "Maps": {
+    "TomtomAPIkey": "JAeaeKBQDvdePcIjhUji0lGw59M11Laa",
+    "GeocodingAPIkey": "660a8cde1f3e9880195741utd6e112a"
   }
 }
