--- a/HalloDoc Project/HalloDoc Project.csproj
+++ b/HalloDoc Project/HalloDoc Project.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\Content\" />
+    <Folder Include="wwwroot\Content\Providers\" />
     <Folder Include="wwwroot\Rotativa\" />
   </ItemGroup>
 
